# Casa-Mkali

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  requirements.txt
docs/: CM-Secure-Assistant-SOP.md
src/: __main__.py  config.py  indexer.py  orchestrator.py
src/ai/: client.py  prompts.py
src/fathom/: client.py  poller.py
src/gmail/: auth.py  poller.py
src/slack_bot/: app.py
src/storage/: database.py  models.py
tests/: conftest.py  test_ai.py  test_airtable.py  test_config.py  test_fathom.py  test_fathom_poller.py  test_gmail.py  test_slack_bot.py  test_storage.py
